Translated NRN related translations

--- a/shared/locales/src/consistent-words-fr.json
+++ b/shared/locales/src/consistent-words-fr.json
@@ -21,5 +21,6 @@
     "groepsnummer": "numéro de groupe",
     "ledenportaal": "portail des membres",
     "rechten": "droits",
-    "sjabloon": "modèle"
+    "sjabloon": "modèle",
+    "fiscale attesten": "attestations fiscales"
   }
