--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -19211,6 +19211,10 @@
     "original": "Functies",
     "translation": "Fonctions"
   },
+  "fc00001e-5d05-485c-b931-1122504e5d36": {
+    "original": "{firstName} is reeds ingeschreven bij {groups}.",
+    "translation": "{firstName} est déjà inscrit à {groups}."
+  },
   "fc00d7a3-4ff4-4355-aef0-c73af12218f1": {
     "original": "Politiek",
     "translation": "Politique"
