--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4973,3 +4973,10 @@
   "9e5a8bc1-91db-44e5-9059-3312f4145525": "dit lid",
   "fc00001e-5d05-485c-b931-1122504e5d36": "{firstName} is reeds ingeschreven bij {groups}."
 }
+  "1394c960-ea6f-44e9-8278-2019623d15bc": "Als {name} geen Belgische nationaliteit heeft, <button>klik dan hier</button>",
+  "802581b7-38dd-45c3-815d-b786b6f9136c": "{name} definitief verwijderen?",
+  "dfbecccd-b964-4e8b-83e4-553b49d9fcc0": "Ben je 100% zeker dat je {name} wilt verwijderen? Vul dan de volledige naam van het lid in ter bevestiging. De volledige geschiedenis gaat verloren. Probeer dit absoluut te vermijden en enkel voor uitzonderingen te gebruiken.",
+  "63786627-79e7-4ab7-b759-774ef3f856d9": "{name} definitief verwijderen?",
+  "c4f7d503-ed7f-4526-b082-28dc2ab7cb17": "Ben je 100% zeker dat je {name} wilt verwijderen? Vul dan de volledige naam van het lid in ter bevestiging. Je kan dit niet ongedaan maken.",
+  "4bbc8b26-74b8-43e2-95e7-86fa00ca517b": "Ben je 100% zeker dat je jouw account wilt verwijderen? Vul dan je huidige e-mailadres in ter bevestiging. Al jouw gegevens gaan verloren. Je kan dit niet ongedaan maken."
+}
