--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4971,9 +4971,7 @@
   "1394c960-ea6f-44e9-8278-2019623d15bc": "Als {name} geen Belgische nationaliteit heeft, <button>klik dan hier</button>",
   "6c9d1930-5ea0-4136-a463-bba118c8dd6a": "deze ouder",
   "9e5a8bc1-91db-44e5-9059-3312f4145525": "dit lid",
-  "fc00001e-5d05-485c-b931-1122504e5d36": "{firstName} is reeds ingeschreven bij {groups}."
-}
-  "1394c960-ea6f-44e9-8278-2019623d15bc": "Als {name} geen Belgische nationaliteit heeft, <button>klik dan hier</button>",
+  "fc00001e-5d05-485c-b931-1122504e5d36": "{firstName} is reeds ingeschreven bij {groups}.",
   "802581b7-38dd-45c3-815d-b786b6f9136c": "{name} definitief verwijderen?",
   "dfbecccd-b964-4e8b-83e4-553b49d9fcc0": "Ben je 100% zeker dat je {name} wilt verwijderen? Vul dan de volledige naam van het lid in ter bevestiging. De volledige geschiedenis gaat verloren. Probeer dit absoluut te vermijden en enkel voor uitzonderingen te gebruiken.",
   "63786627-79e7-4ab7-b759-774ef3f856d9": "{name} definitief verwijderen?",
