Added some missing translations

--- a/shared/locales/src/en.json
+++ b/shared/locales/src/en.json
@@ -169,5 +169,6 @@
   "fbb0dee5-c500-4bb4-81d6-945666ae4784": "account",
   "fd3fea4f-73c7-4c8d-90cd-80ea90e53b98": "Gender",
   "fde0cfa6-c279-4eef-ab75-8f62fd4028a8": "Status",
-  "fe29857c-e4ac-4b25-aa0e-31813f3570c2": "tag"
+  "fe29857c-e4ac-4b25-aa0e-31813f3570c2": "tag",
+  "43cf58c2-2263-4c99-87d2-71d61e8b95fe": "Total"
 }
