--- a/shared/locales/src/fr.json
+++ b/shared/locales/src/fr.json
@@ -85,5 +85,6 @@
   "ef6ac7e5-de7e-4e2e-802f-de730294f05d": "+ 0 euro",
   "f4b5c997-f9ed-4ba9-aabd-ac1d5fa37dfb": "Document",
   "f5fc5d6b-49ef-4b3d-80b7-90e1f81220fa": "Buckaroo",
-  "f97ad8c1-31d2-4b61-9e09-3be86eaeba08": "Type"
+  "f97ad8c1-31d2-4b61-9e09-3be86eaeba08": "Type",
+  "43cf58c2-2263-4c99-87d2-71d61e8b95fe": "Total"
 }
