--- a/shared/locales/src/machine-GoogleGemini-en.json
+++ b/shared/locales/src/machine-GoogleGemini-en.json
@@ -10607,6 +10607,10 @@
     "original": "Een openstaand bedrag kan soms voor meerdere items tegelijk zijn. Dat is vaak nuttige informatie omdat je die items soms anders moet verwerken in je boekhouding. Als je dit werkblad exporteert, krijgt elk item een aparte lijn met bijhorende informatie.",
     "translation": "An outstanding amount can sometimes be for multiple items at once. This is often useful information because you sometimes have to process these items differently in your accounting. If you export this worksheet, each item will receive a separate line with accompanying information."
   },
+  "8e74fdc8-06e0-4686-8ca4-dca7e28aebe3": {
+    "original": "Inloggen met Google",
+    "translation": "Log in with Google"
+  },
   "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": {
     "original": "Breng Stamhoofd in orde",
     "translation": "Get Stamhoofd in order"
