--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -10759,6 +10759,10 @@
     "original": "Een openstaand bedrag kan soms voor meerdere items tegelijk zijn. Dat is vaak nuttige informatie omdat je die items soms anders moet verwerken in je boekhouding. Als je dit werkblad exporteert, krijgt elk item een aparte lijn met bijhorende informatie.",
     "translation": "Un montant dû peut parfois concerner plusieurs articles à la fois. C'est souvent une information utile car vous devez parfois traiter ces articles différemment dans votre comptabilité. Si vous exportez cette feuille de calcul, chaque article recevra une ligne séparée avec les informations correspondantes."
   },
+  "8e74fdc8-06e0-4686-8ca4-dca7e28aebe3": {
+    "original": "Inloggen met Google",
+    "translation": "Connexion avec Google"
+  },
   "8e77d1c1-87dc-4fdb-ad6e-13145bc96f78": {
     "original": "Breng Stamhoofd in orde",
     "translation": "Mettre Stamhoofd en ordre"
