--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -4976,5 +4976,7 @@
   "dfbecccd-b964-4e8b-83e4-553b49d9fcc0": "Ben je 100% zeker dat je {name} wilt verwijderen? Vul dan de volledige naam van het lid in ter bevestiging. De volledige geschiedenis gaat verloren. Probeer dit absoluut te vermijden en enkel voor uitzonderingen te gebruiken.",
   "63786627-79e7-4ab7-b759-774ef3f856d9": "{name} definitief verwijderen?",
   "c4f7d503-ed7f-4526-b082-28dc2ab7cb17": "Ben je 100% zeker dat je {name} wilt verwijderen? Vul dan de volledige naam van het lid in ter bevestiging. Je kan dit niet ongedaan maken.",
-  "4bbc8b26-74b8-43e2-95e7-86fa00ca517b": "Ben je 100% zeker dat je jouw account wilt verwijderen? Vul dan je huidige e-mailadres in ter bevestiging. Al jouw gegevens gaan verloren. Je kan dit niet ongedaan maken."
+  "4bbc8b26-74b8-43e2-95e7-86fa00ca517b": "Ben je 100% zeker dat je jouw account wilt verwijderen? Vul dan je huidige e-mailadres in ter bevestiging. Al jouw gegevens gaan verloren. Je kan dit niet ongedaan maken.",
+  "43cf58c2-2263-4c99-87d2-71d61e8b95fe": "Totaal",
+  "8e74fdc8-06e0-4686-8ca4-dca7e28aebe3": "Inloggen met Google"
 }
