Fixed capital letters

--- a/shared/locales/src/fr.json
+++ b/shared/locales/src/fr.json
@@ -23,8 +23,8 @@
   "5330841f-d2b1-4014-bbea-1b3a8a68faa3": "JNM",
   "552906c2-db14-4bd8-b499-c29f61f57472": "KLJ",
   "55a6f957-af81-40b3-8c83-2096f22044c8": "Code",
-  "6f401bac-7593-4220-8c85-b7d829c39673": "arrière grand-mère",
-  "9a5c69e1-978a-40f4-996f-2ccfbdaa60de": "arrière grand-père",
+  "6f401bac-7593-4220-8c85-b7d829c39673": "Arrière grand-mère",
+  "9a5c69e1-978a-40f4-996f-2ccfbdaa60de": "Arrière grand-père",
   "4b2e0cb1-29e2-421d-a1c5-19a346a400cd": "Mère",
   "5670bc42-cf94-46b6-9ce0-7cdc4ffbb4d9": "simon@stamhoofd.be",
   "59b85264-c4c3-4cf6-8923-9b43282b2787": "hallo@stamhoofd.be",
