Fixed weird &amp;

--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -11680,7 +11680,7 @@
     "translation": "Modifier le type d'affiliation"
   },
   "9bc4abf4-e439-4992-a32e-79a1553af72e": {
-    "original": "Broers &amp; zussen",
+    "original": "Broers & zussen",
     "translation": "Frères et sœurs"
   },
   "9bd091b0-0e9f-41f9-8896-8f2b9e64550c": {
