--- a/shared/locales/src/nl.json
+++ b/shared/locales/src/nl.json
@@ -2948,7 +2948,7 @@
   "50f0a76c-4b6c-47cb-8f95-e11c179c4e6a": "Heeft toegang tot beheerdersportaal",
   "d549cddb-5a1b-4ea9-a7a6-c013029067b2": "Gegevens wijzigen",
   "890ba51d-2bf0-4966-bf80-407a294f55c9": "{member} inschrijven",
-  "9bc4abf4-e439-4992-a32e-79a1553af72e": "Broers &amp; zussen",
+  "9bc4abf4-e439-4992-a32e-79a1553af72e": "Broers & zussen",
   "ba70e3cd-ccdb-4742-b6c9-50bdd1c73da0": "Familie",
   "ee10afe3-2dd4-4fa1-98bc-0e1372903fed": "Lidnummer",
   "ff14d4f3-7664-4226-b895-55ba915042e2": "Verjaardag",
