--- a/shared/locales/src/machine-GoogleGemini-en.json
+++ b/shared/locales/src/machine-GoogleGemini-en.json
@@ -11508,8 +11508,8 @@
     "translation": "Change affiliation type"
   },
   "9bc4abf4-e439-4992-a32e-79a1553af72e": {
-    "original": "Broers &amp; zussen",
-    "translation": "Brothers &amp; sisters"
+    "original": "Broers & zussen",
+    "translation": "Brothers & sisters"
   },
   "9bd091b0-0e9f-41f9-8896-8f2b9e64550c": {
     "original": "Boekhouding",
