--- a/shared/locales/src/machine-GoogleGemini-fr.json
+++ b/shared/locales/src/machine-GoogleGemini-fr.json
@@ -19096,7 +19096,7 @@
     "translation": "Déplacer vers le haut"
   },
   "fa988b87-6665-43e4-a177-77031826e9a8": {
-    "original": "Stamhoofd kan de inhoud van documenten automatisch wijzigen als de daarbij horende gegevens wijzigen, en nieuwe documenten aanmaken als er nieuwe inschrijvingen bij komen (ook na publicatie). Dat is ideaal om bijvoorbeeld ontbrekende of foute gegevens door leden nog te laten invullen via het ledenportaal. Op het moment dat je documenten officiëel hebt ingedient (indien van toepassing), zet je dit best uit. Als dit uit staat zullen onvolledige documenten niet langer zichtbaar zijn voor leden.",
+    "original": "Stamhoofd kan de inhoud van documenten automatisch wijzigen als de daarbij horende gegevens wijzigen, en nieuwe documenten aanmaken als er nieuwe inschrijvingen bij komen (ook na publicatie). Dat is ideaal om bijvoorbeeld ontbrekende of foute gegevens door leden nog te laten invullen via het ledenportaal. Op het moment dat je documenten officiëel hebt ingediend (indien van toepassing), zet je dit best uit. Als dit uit staat zullen onvolledige documenten niet langer zichtbaar zijn voor leden.",
     "translation": "Stamhoofd peut modifier automatiquement le contenu des documents si les données correspondantes changent et créer de nouveaux documents si de nouvelles inscriptions sont ajoutées (même après publication). C’est idéal pour permettre aux membres, par exemple, de compléter des données manquantes ou erronées via le portail des membres. Au moment où vous avez officiellement soumis vos documents (le cas échéant), il est préférable de désactiver cette option. Si cette option est désactivée, les documents incomplets ne seront plus visibles pour les membres."
   },
   "faa31f24-a42f-454b-9ceb-417c46dcee0d": {
