--- a/shared/locales/src/machine-GoogleGemini-en.json
+++ b/shared/locales/src/machine-GoogleGemini-en.json
@@ -18776,7 +18776,7 @@
     "translation": "Move up"
   },
   "fa988b87-6665-43e4-a177-77031826e9a8": {
-    "original": "Stamhoofd kan de inhoud van documenten automatisch wijzigen als de daarbij horende gegevens wijzigen, en nieuwe documenten aanmaken als er nieuwe inschrijvingen bij komen (ook na publicatie). Dat is ideaal om bijvoorbeeld ontbrekende of foute gegevens door leden nog te laten invullen via het ledenportaal. Op het moment dat je documenten officiëel hebt ingedient (indien van toepassing), zet je dit best uit. Als dit uit staat zullen onvolledige documenten niet langer zichtbaar zijn voor leden.",
+    "original": "Stamhoofd kan de inhoud van documenten automatisch wijzigen als de daarbij horende gegevens wijzigen, en nieuwe documenten aanmaken als er nieuwe inschrijvingen bij komen (ook na publicatie). Dat is ideaal om bijvoorbeeld ontbrekende of foute gegevens door leden nog te laten invullen via het ledenportaal. Op het moment dat je documenten officiëel hebt ingediend (indien van toepassing), zet je dit best uit. Als dit uit staat zullen onvolledige documenten niet langer zichtbaar zijn voor leden.",
     "translation": "Stamhoofd can automatically change the content of documents if the associated data changes, and create new documents if new registrations are added (also after publication). This is ideal, for example, to allow members to fill in missing or incorrect data via the member portal. The moment you have officially submitted documents (if applicable), it is best to turn this off. If this is off, incomplete documents will no longer be visible to members."
   },
   "faa31f24-a42f-454b-9ceb-417c46dcee0d": {
